--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <title>HP Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="real-hp.css">
 </head>
 <body>
+    <!-- navbar -->
     <nav>
-        <div class="container">
+        <div class="nav-container">
             <div class="nav-section">
+                <!-- logo -->
                 <div class="nav-logo">
                     <a href="#">
                         <img src="1024px-HP_logo_2012.svg.png" alt="HP">
                     </a>
                 </div>
+                <!-- menu section -->
                 <ul class="nav-menu">
-                    <li class="nav-item dropdown">
-                        <a href="#" class="nav-link">Laptops ▾</a>
+                    <li class="nav-item-dropdown">
+                        <a href="#" class="nav-link">Laptops</a>
                         <div class="dropdown-menu">
                             <div class="dropdown-content">
                                 <div class="dropdown-column">
@@ -41,19 +45,56 @@
                             </div>
                         </div>
                     </li>
+                    <li class="nav-item"><a href="#" class="nav-link">Desktops</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Printers</a></li>
+
                 </ul>
-                <div class="nav-search-bar">
-                    <i class="fa-thin fa-magnifying-glass"></i>
-                    <input type="text" placeholder="Search HP">
-                </div>
-                <div class="nav-shop-icon">
-                    <i class="fa-light fa-cart-shopping"></i>
-                </div>
-                <div class="nav-login-button">
-                    <a class="Login-button" href="#">Masuk</a>
+                <!-- right section -->
+                <div class="nav-right">
+                    <div class="nav-search-bar">
+                        <i class="fas fa-search"></i>
+                        <input type="text" placeholder="Search HP.com">
+                    </div>
+                    <div class="nav-shop-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                    </div>
+                    <div class="nav-login-button">
+                        <a class="login-button" href="#">Sign In</a>
+                    </div>
                 </div>
             </div>
         </div>
     </nav>
+    <div class="lower-navbar">
+        <div class="lower-nav-container">
+            <ul class="lower-nav-menu">
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">Support Home</a></li>
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">Product</a></li>
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">Software and Drivers</a></li>
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">Diagnostics</a></li>
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">Contact us</a></li>
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">Business Support</a></li>
+                <li class="lower-nav-item"><a href="#" class="lower-nav-link">My HP Account</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="container1">
+        <h1>Welcome to HP Customer Support</h1>
+        <p>How can we help?</p>
+    </div>
+    <div class="container2">
+        <div class="box1">
+            <div class="backgroud-colour-box1"></div>
+            <h1>Software and Drivers</h1>
+        </div>
+        <div class="box2">
+            <div class="backgroud-image-box2"></div>
+            <h1>Printer Support</h1>
+        </div>
+        <div class="box3">
+            <div class="backgroud-image-box3"></div>
+            <h1>Computer Support</h1>
+        </div>
+    </div>
 </body>
 </html>
